// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge /> renders link Badge correctly 1`] = `
.c0 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid #026cdf;
  cursor: pointer;
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0:disabled {
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,0.2);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

<button
  className="sc-AxiKw c0"
  href="/"
  size="regular"
>
  Badge
</button>
`;

exports[`Badge /> renders outline Badge correctly 1`] = `
.c0 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: #026cdf;
  background-color: rgba(255,255,255,1);
  border: 1px solid #026cdf;
  cursor: pointer;
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0:disabled {
  color: rgba(2,108,223,0.2);
  background-color: rgba(255,255,255,1);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

<button
  className="sc-AxiKw c0"
  size="regular"
>
  Badge
</button>
`;

exports[`Badge /> renders outline disabled Badge correctly 1`] = `
.c0 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: #026cdf;
  background-color: rgba(255,255,255,1);
  border: 1px solid #026cdf;
  cursor: pointer;
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0:disabled {
  color: rgba(2,108,223,0.2);
  background-color: rgba(255,255,255,1);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

<button
  className="sc-AxiKw c0"
  disabled={true}
  size="regular"
>
  Badge
</button>
`;

exports[`Badge /> renders standard Badge correctly 1`] = `
.c0 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid #026cdf;
  cursor: pointer;
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0:disabled {
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,0.2);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

<button
  className="sc-AxiKw c0"
  size="regular"
>
  Badge
</button>
`;

exports[`Badge /> renders standard disabled Badge correctly 1`] = `
.c0 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid #026cdf;
  cursor: pointer;
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0:disabled {
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,0.2);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

<button
  className="sc-AxiKw c0"
  disabled={true}
  size="regular"
>
  Badge
</button>
`;

exports[`Badge /> renders transparent Badge correctly 1`] = `
.c0 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  cursor: pointer;
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0:disabled {
  color: rgba(255,255,255,0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,0.5);
  cursor: not-allowed;
}

<button
  className="sc-AxiKw c0"
  size="regular"
>
  Badge
</button>
`;

exports[`Badge /> renders transparent disabled Badge correctly 1`] = `
.c0 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  cursor: pointer;
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0:disabled {
  color: rgba(255,255,255,0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,0.5);
  cursor: not-allowed;
}

<button
  className="sc-AxiKw c0"
  disabled={true}
  size="regular"
>
  Badge
</button>
`;
